WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38763
ResourceHandleSoup should not depend on GTK+
https://bugs.webkit.org/show_bug.cgi?id=38763
Summary
ResourceHandleSoup should not depend on GTK+
Leandro Pereira
Reported
2010-05-07 11:46:39 PDT
ResourceHandleSoup.cpp includes gtk/gtk.h, while it should include only glib.h. Attached patches fixes that.
Attachments
ResourceHandleSoup should not depend on GTK+
(4.22 KB, patch)
2010-05-07 11:47 PDT
,
Leandro Pereira
gustavo
: review-
Details
Formatted Diff
Diff
ResourceHandleSoup should not depend on GTK+
(3.66 KB, patch)
2010-05-07 12:13 PDT
,
Leandro Pereira
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Leandro Pereira
Comment 1
2010-05-07 11:47:37 PDT
Created
attachment 55401
[details]
ResourceHandleSoup should not depend on GTK+
Gustavo Noronha (kov)
Comment 2
2010-05-07 12:03:17 PDT
Comment on
attachment 55401
[details]
ResourceHandleSoup should not depend on GTK+ Change the CString include to be #include "CString.h", please, and leave it at the first block.
Gustavo Noronha (kov)
Comment 3
2010-05-07 12:05:16 PDT
Comment on
attachment 55401
[details]
ResourceHandleSoup should not depend on GTK+ 461461 g_object_set(session, 462462 SOUP_SESSION_MAX_CONNS, MAX_CONNECTIONS, 463463 SOUP_SESSION_MAX_CONNS_PER_HOST, MAX_CONNECTIONS_PER_HOST, 464 NULL); 464 0); We use NULL for GObject calls, because they generate compiler warnings otherwise. 596 // Used to set the authentication dialog toplevel; may be NULL 596 // Used to set the authentication dialog toplevel; may be 0 This is a bug in the checker, just leave this as NULL.
Leandro Pereira
Comment 4
2010-05-07 12:13:15 PDT
Created
attachment 55403
[details]
ResourceHandleSoup should not depend on GTK+ Reviewed patch according to gns' comments.
Gustavo Noronha (kov)
Comment 5
2010-05-07 12:47:08 PDT
Comment on
attachment 55403
[details]
ResourceHandleSoup should not depend on GTK+ Looks good!
WebKit Commit Bot
Comment 6
2010-05-08 10:53:51 PDT
Comment on
attachment 55403
[details]
ResourceHandleSoup should not depend on GTK+ Clearing flags on attachment: 55403 Committed
r59028
: <
http://trac.webkit.org/changeset/59028
>
WebKit Commit Bot
Comment 7
2010-05-08 10:53:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug