2010-05-08  Leandro Pereira  <leandro@profusion.mobi>

Reviewed by Gustavo Noronha Silva.

        ResourceHandleSoup should depend only on GLib, not on GTK+.
        http://webkit.org/b/38763

        * platform/network/soup/ResourceHandleSoup.cpp: Include glib.h
        instead of gtk/gtk.h.

Canonical link: https://commits.webkit.org/50269@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59028 268f45cc-cd09-0410-ab3c-d52691b4dbfc